web-infras/parser/tests/fixtures/esprima/ES6/import-declaration/invalid-import-keyword/output.txt
[SyntaxError]: Unexpect keyword, module name can not just as specifier without `as` rename. (1,10)
1|import { for } from "iteration"
 |        ^
